{{$NEXT}}

2.49     2015-08-21

- The Screen output now enables autoflush on the handle it uses to send output
  to STDOUT or STDERR every time it sends a message. This does not affect the
  global STDOUT or STDERR, as the Screen module makes its own handle for
  output. This fixes a bug reported by Karen Etheridge that caused this module
  to not play nicely with Capture::Tiny in some cases. RT #106605.


2.48     2015-08-07

- Fixed (I hope) tests that were added in the last release that fail on
  Windows.


2.47     2015-08-06

- Really, really make per-thread locking work. Depending on when threads and
  threads::shared were loaded, you might get an error like 'Type of arg 1 to
  threads::shared::share must be one of $@% at .../Log/Dispatch/Syslog.pm line
  67, near "$thread_lock)"'. Reported by David Schweikert.

- Added support for auth-related parameters and replyto to
  Log::Dispatch::Email::MailSender. Implemented by Rohan Carly. Based on
  GitHub #10.

- Added a utf8 flag for Log::Dispatch::Screen. If this is true, then it sets
  the ":encoding(UTF-8)" flag on the handle it uses for output (without
  affecting STDOUT or STDERR elsewhere). Suggested by Ivan Baidakou.


2.46     2015-08-05

- Really make the per-thread locking in the Syslog output work. Based on a
  patch by David Schweikert. GitHub #9.


2.45     2015-06-14

- Don't include threads and threads::shared in list of dependencies. This is
  only needed for Log::Dispatch::Syslog and is loaded at runtime as needed
  (which has its own issues but ...). Reported by Kent Fredric. RT #103392.


2.44     2014-10-18

- The fix for a buffered email output in the last release introduced a bug
  with _non-buffered_ email outputs. This would cause a fatal error during
  global destruction when the DESTROY method was called. Reported by Christ
  Hutchinson. RT #99474.


2.43     2014-10-05

- Fixed the thread locking in Log::Dispatch::Syslog (I hope). The previous